package edu.neu.csye6200.model;

public class ImmunizationRule {
	public static final int HEPATITIS = 3;
	public static final int POLIO = 3;
}
