package edu.neu.csye6200.model;

public class Person {
    private int age;
    private String name;
    public int getAge() {
        return age;
    }
    public void setAge(int age) {

        this.age = age;
    }
    public String getName() {

        return name;
    }
    public void setName(String name) {

        this.name = name;
    }

}
