@startuml

title __DAYCAREPROJECT's Class Diagram__\n

  namespace edu.neu.csye6200.controller {
    class edu.neu.csye6200.controller.ClassRoomController {
    }
  }
  

  namespace edu.neu.csye6200.controller {
    class edu.neu.csye6200.controller.RegulationsController {
    }
  }
  

  namespace edu.neu.csye6200.controller {
    class edu.neu.csye6200.controller.StudentController {
    }
  }
  

  namespace edu.neu.csye6200.controller {
    class edu.neu.csye6200.controller.TeacherController {
    }
  }
  

  namespace edu.neu.csye6200.factory {
    abstract class edu.neu.csye6200.factory.PersonFactory {
    }
  }
  

  namespace edu.neu.csye6200.factory {
    class edu.neu.csye6200.factory.StudentFactory {
    }
  }
  

  namespace edu.neu.csye6200.factory {
    class edu.neu.csye6200.factory.TeacherFactory {
    }
  }
  

  namespace edu.neu.csye6200.main {
    class edu.neu.csye6200.main.Driver {
    }
  }
  

  namespace edu.neu.csye6200.model {
    class edu.neu.csye6200.model.Classroom {
    }
  }
  

  namespace edu.neu.csye6200.model {
    class edu.neu.csye6200.model.ImmunizationRecord {
    }
  }
  

  namespace edu.neu.csye6200.model {
    class edu.neu.csye6200.model.ImmunizationRule {
    }
  }
  

  namespace edu.neu.csye6200.model {
    class edu.neu.csye6200.model.Parent {
    }
  }
  

  namespace edu.neu.csye6200.model {
    class edu.neu.csye6200.model.Person {
    }
  }
  

  namespace edu.neu.csye6200.model {
    class edu.neu.csye6200.model.Regulations {
    }
  }
  

  namespace edu.neu.csye6200.model {
    class edu.neu.csye6200.model.Student {
    }
  }
  

  namespace edu.neu.csye6200.model {
    class edu.neu.csye6200.model.Teacher {
    }
  }
  

  namespace edu.neu.csye6200.utils {
    class edu.neu.csye6200.utils.DateUtil {
    }
  }
  

  namespace edu.neu.csye6200.utils {
    class edu.neu.csye6200.utils.SqlUtil {
    }
  }
  

  namespace edu.neu.csye6200.view {
    class edu.neu.csye6200.view.EnrollmentView {
    }
  }
  

  namespace edu.neu.csye6200.view {
    class edu.neu.csye6200.view.ImmunizationView {
    }
  }
  

  namespace edu.neu.csye6200.view {
    class edu.neu.csye6200.view.MainView {
    }
  }
  

  namespace edu.neu.csye6200.view {
    class edu.neu.csye6200.view.StudentView {
    }
  }
  

  namespace edu.neu.csye6200.view {
    class edu.neu.csye6200.view.TeacherView {
    }
  }
  

  edu.neu.csye6200.factory.StudentFactory -up-|> edu.neu.csye6200.factory.PersonFactory
  edu.neu.csye6200.factory.TeacherFactory -up-|> edu.neu.csye6200.factory.PersonFactory
  edu.neu.csye6200.model.Classroom o-- edu.neu.csye6200.model.Regulations : regulations
  edu.neu.csye6200.model.Parent -up-|> edu.neu.csye6200.model.Person
  edu.neu.csye6200.model.Student -up-|> edu.neu.csye6200.model.Person
  edu.neu.csye6200.model.Student o-- edu.neu.csye6200.model.ImmunizationRecord : immunizationRecord
  edu.neu.csye6200.model.Student o-- edu.neu.csye6200.model.Parent : parent
  edu.neu.csye6200.model.Teacher -up-|> edu.neu.csye6200.model.Person
  edu.neu.csye6200.view.EnrollmentView -up-|> javax.swing.JFrame
  edu.neu.csye6200.view.ImmunizationView -up-|> javax.swing.JFrame
  edu.neu.csye6200.view.MainView -up-|> javax.swing.JFrame
  edu.neu.csye6200.view.StudentView -up-|> javax.swing.JFrame
  edu.neu.csye6200.view.TeacherView -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
